[project]
name = "adventure-engine"
version = "0.1.0"
description = "AI-powered interactive text adventure game using MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.2",
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"